objects/ChatSurvey__c.object
<CustomObject>
    <description>SFDC1-834 Capture whether to send or not live chat transcripts.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-834 Linking Chat Surveys to case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Chat Surveys</relationshipLabel>
        <relationshipName>ChatSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChatKey__c</fullName>
        <description>SFDC1-834 Unique key to identify and link back the chat results</description>
        <inlineHelpText>System populated field.  Unique key to identify and link back the chat results.</inlineHelpText>
        <label>ChatKey</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>SFDC1-834 Customer Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LiveChatTranscript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Live Chat Transcript</description>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Chat Surveys</relationshipLabel>
        <relationshipName>ChatSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDChatSurvey__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>ChS{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ChatSurvey</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SendTranscript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Transcript</label>
        <type>Checkbox</type>
    </fields>
    <label>Chat Survey</label>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Chat Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>